added dashboard to patternlab, added a missing class to the dashboard pane

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/card-types@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/card-types@inprogress.mustache
@@ -3,133 +3,133 @@
 
 <main id="main" class="main" role="main" tabindex="-1">
   <div class="region-content">
-
-    <div class="l-panels-landing preface-empty title sidebar main">
-      <div class="l-preface layout-constrain"></div>
-      <div class="l-title region-landing-title">
-        <div class="layout-constrain">
-          {{> molecules-landing-page-intro-innovations }}
+    <div class="region__inner">
+      <div class="l-panels-landing preface-empty title sidebar main">
+        <div class="l-preface layout-constrain"></div>
+        <div class="l-title region-landing-title">
+          <div class="layout-constrain">
+            {{> molecules-landing-page-intro-innovations }}
+          </div>
         </div>
-      </div>
-      <div class="l-wrapper region-landing-content">
-        <div class="layout-constrain">
-          <aside class="l-sidebar">
-            {{> molecules-filters }}
-          </aside>
-          <div class="l-main">
+        <div class="l-wrapper region-landing-content">
+          <div class="layout-constrain">
+            <aside class="l-sidebar">
+              {{> molecules-filters }}
+            </aside>
+            <div class="l-main">
 
-            <div class="pane">
-              <h2 class="pane__title">Funding Op Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-funding-op-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                </div>
-              </div>
-            </div>
-
-            <div class="pane">
-              <h2 class="pane__title">User Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-user-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                </div>
-              </div>
-            </div>
-
-            <div class="pane">
-              <h2 class="pane__title">Sector/Region/Topic Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-region-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                </div>
-              </div>
-            </div>
-
-            <div class="pane">
-              <h2 class="pane__title">Event Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-event-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                </div>
-              </div>
-            </div>
-
-            <div class="pane">
-              <h2 class="pane__title">Innovation Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-innovation-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                </div>
-              </div>
-            </div>
-
-            <div class="pane">
-              <h2 class="pane__title">Highlight Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-highlight-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                </div>
-              </div>
-            </div>
-
-            <div class="pane">
-              <h2 class="pane__title">Resource Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-resource-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                </div>
-              </div>
-            </div>
-
-            <div class="pane">
-              <h2 class="pane__title">Organization Teaser</h2> 
-              <div class="pane__content">
-                <div class="view--card-view-3col">
-                  {{# listItems.three }}
-                    <div class="views-row">
-                      {{> organisms-organization-teaser }}
-                    </div>
-                  {{/ listItems.three }}
-                  <div class="view__pager">
-                    {{> molecules-pager }}
+              <div class="pane">
+                <h2 class="pane__title">Funding Op Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-funding-op-teaser }}
+                      </div>
+                    {{/ listItems.three }}
                   </div>
                 </div>
               </div>
-            </div>
 
+              <div class="pane">
+                <h2 class="pane__title">User Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-user-teaser }}
+                      </div>
+                    {{/ listItems.three }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="pane">
+                <h2 class="pane__title">Sector/Region/Topic Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-region-teaser }}
+                      </div>
+                    {{/ listItems.three }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="pane">
+                <h2 class="pane__title">Event Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-event-teaser }}
+                      </div>
+                    {{/ listItems.three }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="pane">
+                <h2 class="pane__title">Innovation Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-innovation-teaser }}
+                      </div>
+                    {{/ listItems.three }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="pane">
+                <h2 class="pane__title">Highlight Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-highlight-teaser }}
+                      </div>
+                    {{/ listItems.three }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="pane">
+                <h2 class="pane__title">Resource Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-resource-teaser }}
+                      </div>
+                    {{/ listItems.three }}
+                  </div>
+                </div>
+              </div>
+
+              <div class="pane">
+                <h2 class="pane__title">Organization Teaser</h2>
+                <div class="pane__content">
+                  <div class="view--card-view-3col">
+                    {{# listItems.three }}
+                      <div class="views-row">
+                        {{> organisms-organization-teaser }}
+                      </div>
+                    {{/ listItems.three }}
+                    <div class="view__pager">
+                      {{> molecules-pager }}
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </div>
 </main>
 
