--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/community-detail@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/community-detail@inprogress.mustache
@@ -3,12 +3,11 @@
 
 <main id="main" class="main" role="main">
   <div class="region-content">
-
-    {{> organisms-community-detail }}
-
+    <div class="region__inner">
+      {{> organisms-community-detail }}
+    </div>
   </div>
 </main>
 
 {{> organisms-postscript }}
 {{> organisms-footer }}
- 
