--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/funding-detail@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/funding-detail@inprogress.mustache
@@ -3,9 +3,9 @@
 
 <main id="main" class="main" role="main" tabindex="-1">
   <div class="region-content">
-
-    {{> organisms-funding }}
-
+    <div class="region__inner">
+      {{> organisms-funding }}
+    </div>
   </div>
 </main>
 
