--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/00-homepage@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/00-homepage@inprogress.mustache
@@ -3,27 +3,29 @@
 
 <main id="main" class="main" role="main" tabindex="-1">
 	<div class="region-content">
-    <div class="l-panels-home hero main villain postscript">
-      <div class="l-hero">
-         {{> molecules-homepage-header }}
-      </div>
-      <div class="l-main">
-        <div class="layout-constrain">
-          {{> molecules-homepage-views-personas-pane }}
-          {{> molecules-homepage-views-action-card-panes }}
-          {{> molecules-homepage-views-staff-picks-pane }}
-          {{> molecules-homepage-views-funding-pane }}
-        </div>
-      </div>
-      <div class="l-villain">
-         {{> molecules-homepage-footer-callout }}
-      </div>
-      <div class="l-postscript">
-        <div class="layout-constrain">
-          {{> molecules-homepage-join-callout }}
-        </div>
-      </div>
-    </div>
+		<div class="region__inner">
+	    <div class="l-panels-home hero main villain postscript">
+	      <div class="l-hero">
+	         {{> molecules-homepage-header }}
+	      </div>
+	      <div class="l-main">
+	        <div class="layout-constrain">
+	          {{> molecules-homepage-views-personas-pane }}
+	          {{> molecules-homepage-views-action-card-panes }}
+	          {{> molecules-homepage-views-staff-picks-pane }}
+	          {{> molecules-homepage-views-funding-pane }}
+	        </div>
+	      </div>
+	      <div class="l-villain">
+	         {{> molecules-homepage-footer-callout }}
+	      </div>
+	      <div class="l-postscript">
+	        <div class="layout-constrain">
+	          {{> molecules-homepage-join-callout }}
+	        </div>
+	      </div>
+	    </div>
+		</div>
   </div>
 </main>
 
