--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/discussion-landing@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/discussion-landing@inprogress.mustache
@@ -3,30 +3,31 @@
 
 <main id="main" class="main" role="main" tabindex="-1">
   <div class="region-content">
-
-    <div class="l-panels-landing preface-empty title sidebar main">
-      <div class="l-preface layout-constrain"></div>
-      <div class="l-title region-landing-title">
-        <div class="layout-constrain">
-          {{> molecules-landing-page-intro-discussions }}
+    <div class="region__inner">
+      <div class="l-panels-landing preface-empty title sidebar main">
+        <div class="l-preface layout-constrain"></div>
+        <div class="l-title region-landing-title">
+          <div class="layout-constrain">
+            {{> molecules-landing-page-intro-discussions }}
+          </div>
         </div>
-      </div>
-      <div class="l-wrapper region-landing-content">
-        <div class="layout-constrain">
-          <aside class="l-sidebar">
-            {{> molecules-filters }}
-          </aside>
-          <div class="l-main">
-            <div class="pane">
-              <div class="pane__content">
-                <div class="view view--discussion-listing">
-                  {{# listItems.nine }}
-                    <div class="views-row">
-                      {{> organisms-discussion-teaser }}
+        <div class="l-wrapper region-landing-content">
+          <div class="layout-constrain">
+            <aside class="l-sidebar">
+              {{> molecules-filters }}
+            </aside>
+            <div class="l-main">
+              <div class="pane">
+                <div class="pane__content">
+                  <div class="view view--discussion-listing">
+                    {{# listItems.nine }}
+                      <div class="views-row">
+                        {{> organisms-discussion-teaser }}
+                      </div>
+                    {{/ listItems.nine }}
+                    <div class="view__pager">
+                      {{> molecules-pager }}
                     </div>
-                  {{/ listItems.nine }}
-                  <div class="view__pager">
-                    {{> molecules-pager }}
                   </div>
                 </div>
               </div>
@@ -35,7 +36,6 @@
         </div>
       </div>
     </div>
-
   </div>
 </main>
 
