--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/wanteds-landing@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/wanteds-landing@inprogress.mustache
@@ -3,25 +3,25 @@
 
 <main id="main" class="main" role="main" tabindex="-1">
   <div class="region-content">
-
-    <div class="l-panels-landing preface-empty title sidebar-empty main">
-      <div class="l-preface layout-constrain"></div>
-      <div class="l-title region-landing-title">
-        <div class="layout-constrain">
-          {{> molecules-landing-page-intro-wanteds }}
-        </div>
-      </div>
-      <div class="l-wrapper region-landing-content">
-        <div class="layout-constrain">
-          
-          <div class="l-main">
-            {{> molecules-wanteds-action-card-panes }}
+    <div class="region__inner">
+      <div class="l-panels-landing preface-empty title sidebar-empty main">
+        <div class="l-preface layout-constrain"></div>
+        <div class="l-title region-landing-title">
+          <div class="layout-constrain">
+            {{> molecules-landing-page-intro-wanteds }}
           </div>
+        </div>
+        <div class="l-wrapper region-landing-content">
+          <div class="layout-constrain">
 
+            <div class="l-main">
+              {{> molecules-wanteds-action-card-panes }}
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
-
   </div>
 </main>
 
