--- a/public/sites/all/themes/gesso/sass/partials/components/_dashboard-header.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_dashboard-header.scss
@@ -4,6 +4,7 @@
   background-size: cover;
   @include breakpoint(800px, $no-query: true) {
     display: table;
+    width: 100%;
   }
 }
 
@@ -50,9 +51,9 @@
     @include breakpoint(800px, $no-query: true) {
       display: block;
       margin: 0 0 0.5em 0;
-    }  
+    }
     max-width: 200px;
-    min-width: 130px; 
+    min-width: 130px;
   }
 }
 
@@ -66,7 +67,8 @@
   color: #fff;
   font-size: em(28px);
   @include breakpoint(800px, $no-query: true) {
-    font-size: em(40px);    
+    font-size: em(40px);
   }
   margin: 0;
+  text-transform: uppercase;
 }
