styling for resource detail and some minor refactoring

--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/innovation@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/02-organisms/01-content-types/innovation@inprogress.mustache
@@ -14,6 +14,7 @@
     </div>
     <aside class="l-main-sidebar">
       {{> molecules-favorite-this }}
+      {{> molecules-report-button }}
     </aside>
   </div>
   <div class="l-center layout-constrain">
@@ -36,7 +37,7 @@
     <div class="l-bottom">
 
       <div class="pane pane--node pane--full-content">
-        <h2 class="pane__title">About This Innovation</h2> 
+        <h2 class="pane__title">About This Innovation</h2>
         <div class="pane__content">
 
           <div class="node node--innovation node--full view-mode-full">
@@ -104,7 +105,7 @@
                 </div>
               </div>
             </div>
-          
+
             <div class="field field--innovation-status-update">
               <h2 class="field__label field__label--above">Status Update</h2>
               <p>Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit​​, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.</p>
@@ -149,10 +150,10 @@
                 <li>Making the Journey from Cash to Electronic Payments</li>
                 <li>Lorem ipsum dolor amet Lorem ipsum dolor amet</li>
               </ul>
-            </div> 
+            </div>
 
             {{> molecules-comments }}
-      
+
           </div>
         </div>
       </div>
