--- a/public/sites/all/themes/gesso/sass/partials/components/_field.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_field.scss
@@ -18,11 +18,8 @@
     padding-top: 2em;
   }
 }
- 
-.field__label {
 
-}
+.field__label {}
 
-
-
- 
+// Custom block styles imported via sass globbing.
+@import '../sass-globbing/field';
