--- a/public/sites/all/themes/gesso/sass/partials/components/_welcome-stats.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_welcome-stats.scss
@@ -1,10 +1,8 @@
 // @file
 // Styles for Welcome Stats Item
 
-.welcome-stats__item {
+.welcome-stats {
   text-align: center;
-
-
 
   .welcome-stats__number {
     color: #FFF;
