styling for resource, news and blog detail pages

--- a/public/sites/all/themes/gesso/sass/partials/components/_sharethis-buttons.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_sharethis-buttons.scss
@@ -6,6 +6,7 @@
     @extend %button;
     @extend %button--highlight;
     @extend %button--share;
+    margin-bottom: 0;
     white-space: nowrap;
   }
 }
