news detail tweaks

--- a/public/sites/all/themes/gesso/sass/partials/components/_details.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_details.scss
@@ -5,11 +5,11 @@
     .field-label {
       float: left;
       font-weight: bold;
-      width: 130px;
+      min-width: 130px;
     }
     .field-items {
       font-weight: bold;
-      margin-left: 130px;
+      margin-left: 135px;
     }
   }
 }
