--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
@@ -7,26 +7,24 @@
     flex-direction: row;
     justify-content: center;
   }
-  background-color: nth($microsite-primary-list, 1); // just in case palette or color class is missing
-  @each $current-color in $microsite-primary-list {
-    $i: index($microsite-primary-list, $current-color);
-    .microsite-palette#{$i} & { // body class
-      background-color: $current-color;
+  background-color: #00498f; // just in case palette or color class is missing
+  @each $item, $color in $micrositeColorMap {
+    .microsite-palette#{$item} & {
+      background-color: micro-site($item, 'primary');
       &.microsite-secondary { // component class
-        background-color: nth($microsite-secondary-list, $i); 
+        background-color: micro-site($item, 'secondary');
       }
       &.microsite-tertiary {
-        background-color: nth($microsite-tertiary-list, $i); 
+        background-color: micro-site($item, 'tertiary');
       }
       &.microsite-light-gray {
-        background-color: nth($microsite-light-gray-list, $i); 
+        background-color: micro-site($item, 'light-gray');
       }
       &.microsite-dark-gray {
-        background-color: nth($microsite-dark-gray-list, $i); 
+        background-color: micro-site($item, 'dark-gray');
       }
     }
   }
-
 }
 
 .microsite-50-50__text {
@@ -44,6 +42,11 @@
       color: #333 !important;
     }
   }
+  .no-flexbox & {
+    @include breakpoint(900px, $no-query: true) {
+      float: right;
+    }
+  }
 }
 
 .microsite-50-50__image {
@@ -54,10 +57,25 @@
   img {
     width: 100%;
   }
+  .no-flexbox & {
+    @include breakpoint(900px, $no-query: true) {
+      float: left;
+    }
+  }
 }
 
 .microsite-50-50--reversed {
   @include breakpoint(900px, $no-query: true) {
     flex-direction: row-reverse;
+  }
+  .no-flexbox & {
+    @include breakpoint(900px, $no-query: true) {
+      .microsite-50-50__image {
+        float: right;
+      }
+      .microsite-50-50__text {
+        float: left;
+      }
+    }
   }
 }
