--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-header.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-header.scss
@@ -32,18 +32,17 @@ $header-image-height: 700px;
 }
 
 .microsite-header--arrow {
-  @each $current-color in $microsite-secondary-list {
-    $i: index($microsite-secondary-list, $current-color);
-    .microsite-palette#{$i} & { // body class
-      border-bottom: 6px solid $current-color;
+  @each $item, $color in $micrositeColorMap {
+    .microsite-palette#{$item} & {
+      border-bottom: 6px solid micro-site($item, 'secondary');
     }
   }
+
   margin: 0 auto 5em auto;
   &:after {
-    @each $current-color in $microsite-secondary-list {
-      $i: index($microsite-secondary-list, $current-color);
-      .microsite-palette#{$i} & { // body class
-        border-color: $current-color transparent transparent;
+    @each $item, $color in $micrositeColorMap {
+      .microsite-palette#{$item} & {
+        border-color: micro-site($item, 'secondary') transparent transparent;
       }
     }
     border-style: solid;
@@ -66,7 +65,7 @@ $header-image-height: 700px;
 }
 
 .microsite-header__text-wrapper {
-  display: table; 
+  display: table;
   width: 100%;
 }
 
@@ -108,11 +107,10 @@ $header-image-height: 700px;
   max-width: $max-page-width;
   padding: 5% 2% 2% 2%;
   &:after {
-    
-    @each $current-color in $microsite-secondary-list {
-      $i: index($microsite-secondary-list, $current-color);
-      .microsite-palette#{$i} & { // body class
-        border-top: 4px solid $current-color;
+
+    @each $item, $color in $micrositeColorMap {
+      .microsite-palette#{$item} & {
+        border-top: 4px solid micro-site($item, 'secondary');
       }
     }
 
@@ -139,4 +137,3 @@ $header-image-height: 700px;
   max-width: $max-page-width;
   padding: 1% 2% 5% 2%;
 }
- 
