--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
@@ -28,11 +28,10 @@ $ol-bullet-size: 60px;
       }
     }
     > li:before {
-      
-      @each $current-color in $microsite-primary-list {
-        $i: index($microsite-primary-list, $current-color);
-        .microsite-palette#{$i} & { // body class
-          background-color: $current-color;
+
+      @each $item, $color in $micrositeColorMap {
+        .microsite-palette#{$item} & {
+          background-color: micro-site($item, 'primary');
         }
       }
 
@@ -51,7 +50,7 @@ $ol-bullet-size: 60px;
     }
     ul &, ol {
       margin: 0.5em 0;
-      padding: 0 0 0 (($ol-bullet-size/2)+10);  
+      padding: 0 0 0 (($ol-bullet-size/2)+10);
       > li:before {
         line-height: $ol-bullet-size/2;
         font-size: 14px;
@@ -77,10 +76,9 @@ $ol-bullet-size: 60px;
     }
     > li:before {
 
-      @each $current-color in $microsite-secondary-list {
-        $i: index($microsite-secondary-list, $current-color);
-        .microsite-palette#{$i} & { // body class
-          color: $current-color;
+      @each $item, $color in $micrositeColorMap {
+        .microsite-palette#{$item} & {
+          color: micro-site($item, 'secondary');
         }
       }
       content: "►";
