--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--page-title.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--page-title.scss
@@ -17,10 +17,9 @@
     .section-wanteds & {
       border-color: $wanted-section-color transparent transparent transparent;
     }
-    @each $current-color in $microsite-primary-list {
-      $i: index($microsite-primary-list, $current-color);
-      .microsite-palette#{$i} & { // body class
-        border-color: $current-color transparent transparent transparent;
+    @each $item, $color in $micrositeColorMap {
+      .microsite-palette#{$item} & {
+        border-color: micro-site($item, 'primary') transparent transparent transparent;
       }
     }
     height: 0;
@@ -37,6 +36,6 @@
     font-weight: 300;
     line-height: 1.3;
     margin: 0;
-    padding: 0.6em 0 0.75em 0; 
+    padding: 0.6em 0 0.75em 0;
   }
 }
