--- a/public/sites/all/themes/gesso/sass/partials/global/extendables/_microsite-component.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/extendables/_microsite-component.scss
@@ -1,29 +1,29 @@
 %microsite-component {
   clear: both;
 
-  @each $current-color in $microsite-primary-list {
-    $i: index($microsite-primary-list, $current-color);
+  @each $item, $color in $micrositeColorMap {
+  
     a {
-      .microsite-palette#{$i} & { // body class
-        color: $current-color;
+      .microsite-palette#{$item} & { // body class
+        color:  micro-site($item, 'primary');
         &:hover,
         &:focus {
-          color: darken($current-color,20%);
+          color: darken(micro-site($item, 'primary'),20%);
         }
       }
     }
     h1, h2, h3, h4, h5, h6 {
-      .microsite-palette#{$i} & {
-        color: nth($microsite-header-list, $i);
+      .microsite-palette#{$item} & {
+        color: micro-site($item, 'header');
       }
     }
     .button {
-      .microsite-palette#{$i} & {
-        background-color: nth($microsite-secondary-list, $i);
-        border-color: nth($microsite-secondary-list, $i);
+      .microsite-palette#{$item} & {
+        background-color: micro-site($item, 'secondary');
+        border-color: micro-site($item, 'secondary');
         &:hover, &:focus {
-          background-color: darken(nth($microsite-secondary-list, $i), 6.9%);
-          border-color: darken(nth($microsite-secondary-list, $i), 6.9%);
+          background-color: darken(micro-site($item, 'secondary'), 6.9%);
+          border-color: darken(micro-site($item, 'secondary'), 6.9%);
         }
       }
 
@@ -35,4 +35,3 @@
   }
 
 }
- 
