--- a/public/sites/all/themes/gesso/sass/partials/global/variables/_microsites.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/variables/_microsites.scss
@@ -1,13 +1,30 @@
-// Microsites
-// first color is palette1, second is palette2
+// Micro Site Map
+$micrositeColorMap: (
+ 1: (
+   primary: #00498f,
+   secondary: #cd1041,
+   tertiary: #cd1041,
+   light-gray: #dae3e7,
+   dark-gray: #444545,
+   header: #035b94,
+   site-header: #565a5c,
+   main-menu: #00498f,
+ ),
+ 2: (
+   primary: #cd1041,
+   secondary: #faa74a,
+   tertiary: #0094b4,
+   light-gray: #dae3e7,
+   dark-gray: #444545,
+   header: #0094b4,
+   site-header: #0094b4,
+   main-menu: #444545,
+ )
+);
 
-$microsite-primary-list: #00498f #cd1041;
-$microsite-secondary-list: #cd1041 #faa74a;
-$microsite-tertiary-list: #cd1041 #0094b4;
-$microsite-light-gray-list: #dae3e7 #dae3e7;
-$microsite-dark-gray-list: #444545 #444545;
-$microsite-header-list: #035b94 #0094b4;
-$microsite-site-header-list: #565a5c #0094b4;
-$microsite-main-menu-list: #00498f #444545;
-
- 
+//Micro Site Function
+@function micro-site($palette, $color: "primary") {
+  @if map-has-key($micrositeColorMap, $palette) {
+    @return map-get(map-get($micrositeColorMap, $palette), $color);
+  }
+}
